[tool.poetry]
name = "ytdder"
version = "0.1.0"
description = ""
authors = ["Bruno Garcia <bruno2112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytube = "^15.0.0"
pyqt6-qt6 = "^6.4"

[tool.poetry.group.dev.dependencies]
pyqt6-tools = "^6"
pydocstyle = "^6.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
